[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"

[project]
name = "code-review-agent"
version = "0.1.0"
description = "AI Senior Engineer Code Review Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"